<resources>
    <string name="app_name">W5</string>

    //Headings
    <string name="heading_one">Browse your  menu and order directly</string>
    <string name="heading_two">Even to space with us! Together</string>
    <string name="heading_three">Pickup delivery at your door</string>

    //Desciption
    <string name="desc">Our app can send you everywhere, even space. For only $2.99 per month</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
</resources>